# twigdrop

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  scratch_debug.rs  skills-lock.json
.github/workflows/: ci.yml  release.yml
docs/: IMPROVEMENTS.md
src/: actions.rs  app.rs  git.rs  main.rs  models.rs  runtime.rs  ui.rs
src/actions/: commands.rs  mod.rs
src/ai/: mod.rs  ollama.rs  openai.rs
src/db/: mod.rs
src/git/: commands.rs  files.rs  mod.rs  stash.rs  status.rs
src/handlers/: keyboard.rs  mod.rs  mouse.rs
src/ui/: components.rs  mod.rs  screens.rs
src/ui/animations/: mod.rs  particles.rs  snap.rs
src/utils/: config.rs  terminal.rs
