[package]
name = "twigdrop"
version = "0.0.2-dev"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
ratatui = "0.30.0"
git2 = "0.19.0"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
rusqlite = "0.33.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
reqwest = { version = "0.12.12", features = ["json"] }
dotenv = "0.15.0"
async-trait = "0.1.86"
ignore = "0.4.23"
toml = "0.8.20"
directories = "6.0.0"
rig = "0.37.0"
